# mocbapy

./: .gitignore  Ecosystem.py  ModelOcean.py  README.md  TestVLP2.py  pyproject.toml  requirements.txt  setup.py
.devcontainer/: Dockerfile  devcontainer.json
mocbapy/: Ecosystem.py  EcosystemModel.py  Paretogrids.py  __init__.py  analysis.py  draw.py  mptest.py  procedures.py  test.py  test2D.py  utilities.py
notebooks/: Ecosystem2cobrapy.ipynb  Grilla.ipynb
tests/: TestFBA.py
