[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "mocbapy"
version = "0.2"
authors = [
    {name = 'Marko Budinich', email = 'marko.budinich@gmail.com'},
]
description='Multi Objective Constrait-Based Analysis in python'
readme = "README.md"
license = {text = "MIT"}

[tool.setuptools.packages]
find = {}